[gd_scene load_steps=4 format=3 uid="uid://dnlu06cgbfnex"]

[ext_resource type="Script" path="res://scenes/config/settings/AddCustomInfo.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dfth5p8xpsgmy" path="res://assets/icons/success.svg" id="2"]
[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="3"]

[node name="AddCustomInfoPopup" type="Window"]
initial_position = 1
size = Vector2i(624, 357)
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WindowPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Choose an identifier for the custom %s. This identifier is internal and not displayed on the UI.
This cannot be changed after being set."
horizontal_alignment = 1
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/VBoxContainer/IntroLabel"]
script = ExtResource("3")

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
placeholder_text = "Identifier"
max_length = 32

[node name="CheckLower" type="HBoxContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/CheckLower"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2")
expand_mode = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/CheckLower"]
layout_mode = 2
size_flags_horizontal = 3
text = "Is in lowercase"

[node name="CheckSpecial" type="HBoxContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/CheckSpecial"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2")
expand_mode = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/CheckSpecial"]
layout_mode = 2
size_flags_horizontal = 3
text = "Contains only alphanumeric characters and the character _ (no spaces)"

[node name="CheckExisting" type="HBoxContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/CheckExisting"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2")
expand_mode = 1

[node name="ExistingLabel" type="Label" parent="Panel/VBoxContainer/CheckExisting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "There is no existing %s with the same identifier"

[node name="OK" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Ok"

[connection signal="text_changed" from="Panel/VBoxContainer/LineEdit" to="." method="check_text"]
[connection signal="text_submitted" from="Panel/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/OK" to="." method="_on_OK_pressed"]
